--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@400;900&display=swap');
 
 html{
     font-family: 'Comfortaa',cursive;
+    
 }
